# game_of_life

./: .gitignore  CMakeLists.txt
include/: gol.h
src/: gol.c  main.c
